new project added, visibility of project images on small scree is added

--- a/index.html
+++ b/index.html
@@ -135,15 +135,36 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row" >
+
+                <div id="project_block" class="project shadow-large"   >
+                    
+                    <div class="project_image_block" > 
+                        <img width="300px" height="200px"  src="./images/bitrix24.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Clone of theoutnet.com</h3>
+                        <p>
+                            This is a clone of bitrix24.com project and task management tool. This is a MERN stack project. Tech stack we used is React-JS, Express-JS, Node-JS MongoDB, Github, Chakra-UI, etc.
+                        </p>
+                        <div style="display:flex ; gap:10%; justify-content:center" >
+                            <a target="blank" href="https://bitrix-24.netlify.app/">View Project</a>
+                        
+                            <a target="blank" href="https://github.com/AnuragPawar-132/psychotic-cars-5822-Bitrix24.net" >View Github</a>
+                        </div>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+
                 <div class="project shadow-large" >
-                    <div class="project-image" style="padding:1%;">
+                    <div class="project_image_block">
                         <img width="300px" height="200px"  src="./images//himalayausa.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Clone of himalayausa.com</h3>
                         <p>
-                            This is a clone of himalayausa.com website. It was a group project created in construct week at Masai School. Tech stack we use is React, Redux, JavaScript, Chakra UI, etc. I was the team lead and I worked on product page, about us page cart & checkout pages.
+                            This is a clone of himalayausa.com website. This is a frontend web application which is build using React-JS. Tech stack we use is React, Redux, JavaScript, Chakra UI, etc. I was the team lead and I worked on product page, about us page cart & checkout pages.
                         </p>
                         <div style="display:flex ; gap:10%; justify-content:center" >
                             <a target="blank" href="https://himalayausaclone.vercel.app/">View Project</a>
@@ -156,14 +177,14 @@
                 <!-- End .project -->
 
                 <div class="project shadow-large"  >
-                    <div class="project-image" style="padding:1%;">
+                    <div class="project_image_block">
                         <img width="300px" height="200px"  src="./images//outnet.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Clone of theoutnet.com</h3>
                         <p>
-                            This is a clone of theoutnet.com ecommerce fashion website. It was a group project created in construct week at Masai School. Tech stack we used is HTML, CSS, JavaScript, localstorage, Github, etc. I worked on men-women homepage, cart & wishlist pages.
+                            This is a clone of theoutnet.com ecommerce fashion website. This is a frontend web application which is build using React-JS. Tech stack we used is HTML, CSS, JavaScript, localstorage, Github, etc. I worked on men-women homepage, cart & wishlist pages.
                         </p>
                         <div style="display:flex ; gap:10%; justify-content:center" >
                             <a target="blank" href="https://theoutne-e7f2b5.netlify.app/">View Project</a>
@@ -175,14 +196,14 @@
                 </div>
                 <!-- End .project -->
                 <div class="project shadow-large">
-                    <div class="project-image" style="padding:1%;" >
+                    <div class="project_image_block" >
                         <img width="300px" height="200px"  src="./images//bigbasket.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Clone of bigbasket.com</h3>
                         <p>
-                            This is a clone of bigbasket.com online vegetable & grocery shopping website. It was a group project created in construct week at Masai School. Tech stack we use is HTML, CSS, JavaScript, Github etc. I worked on collecting the data, product list page.
+                            This is a clone of bigbasket.com online vegetable & grocery shopping website. This is a frontend web application which is build using React-JS. Tech stack we use is HTML, CSS, JavaScript, Github etc. I worked on collecting the data, product list page.
                         </p>
                         <div style="display:flex ; gap:10%; justify-content:center" >
                             <a target="blank" href="https://delicate-flan-410bb9.netlify.app/">View Project</a>
@@ -233,7 +254,7 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>Masai School</h3>
-            <span class="education-date">Jan 2022 - now</span>
+            <span class="education-date">Jan 2022 - present</span>
             <h4>Full Stack Web Development</h4>
             <p>
                 I am learning Full Stack Web Development at Masai School. Masai School is a 9-9-6 intensive coding school. I am enjoying my journey of becoming Full Stack Web Developer at Masai School.
